--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo-box">
-                <img src="./img/logo-white.png" alt="logo" class="logo">
+            <div class="header__logo-box">
+                <img src="./img/logo-white.png" alt="logo" class="header__logo">
             </div>
-            <div class="heading-box">
+            <div class="header__text-box">
                 <div class="heading-primary mb-50">
-                    <div class="heading-primary-main">Year 2020</div>
-                    <div class="heading-primary-sub">the one where we were 'quarantined'</div>
+                    <div class="heading-primary--main">Year 2020</div>
+                    <div class="heading-primary--sub">the one where we were 'quarantined'</div>
                 </div>
-                <a href="#" class="btn btn-white btn-animated">Explore What I Did</a>
+                <a href="#" class="btn btn--white btn--animated">Explore What I Did</a>
             </div>
         </div>
     </body>
