section account page with animations and pics

--- a/index.html
+++ b/index.html
@@ -25,37 +25,40 @@
                 <a href="#" class="btn btn--white btn--animated">Explore What I Did</a>
             </div>
         </div>
+        <main>
+            <section class="section-about">
+                <div class="centered-text mb-80">
+                    <h2 class="header-secondary">
+                        Few Things I Did In My Quarantine !
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary mb-10">Thing 1</h3>
+                        <p class="para-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Autem nulla voluptas obcaecati explicabo deserunt! Inventore 
+                            est doloremque sint quia optio, dolorem deleniti ipsam quisquam 
+                            repudiandae iste, explicabo minus.
+                        </p>
+                        <h3 class="heading-tertiary mb-10">Thing 2</h3>
+                        <p class="para-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Autem nulla voluptas obcaecati explicabo deserunt! Inventore 
+                            est doloremque sint quia optio, dolorem deleniti ipsam quisquam.
+                        </p>
 
-        <section class="grid">
-            <div class="row">
-                <div class="col-1-of-2">col-1-of-2</div>
-                <div class="col-1-of-2">col-1-of-2</div>  
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">col-1-of-3</div>
-                <div class="col-1-of-3">col-1-of-3</div>
-                <div class="col-1-of-3">col-1-of-3</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">col-1-of-3</div>
-                <div class="col-2-of-3">col-2-of-3</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">col-1-of-4</div>
-                <div class="col-1-of-4">col-1-of-4</div>
-                <div class="col-1-of-4">col-1-of-4</div>
-                <div class="col-1-of-4">col-1-of-4</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">col-1-of-4</div>
-                <div class="col-1-of-4">col-1-of-4</div>
-                <div class="col-2-of-4">col-2-of-4</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">col-1-of-4</div>
-                <div class="col-3-of-4">col-3-of-4</div>
-            </div>
-        </section>
-        
+                        <a href="#" class="btn-text">See more &RightArrow;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="pictures">
+                            <img src="img/nat-1-large.jpg" alt="picture 1" class="pictures__pic pictures__pic--p1">
+                            <img src="img/nat-2-large.jpg" alt="picture 2" class="pictures__pic pictures__pic--p2">
+                            <img src="img/nat-3-large.jpg" alt="picture 3" class="pictures__pic pictures__pic--p3">
+                        </div>
+                    </div>  
+                </div>
+            </section>
+        </main>        
     </body>
 </html>
