section-passtime with cards

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-        <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+        <link rel="stylesheet" href="css/icon-fonts.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -57,6 +57,58 @@
                             <img src="img/nat-3-large.jpg" alt="picture 3" class="pictures__pic pictures__pic--p3">
                         </div>
                     </div>  
+                </div>
+            </section>
+            <section class="section-passtime">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="passtime-box">
+                            <i class="passtime-box__icon icon-basic-spades"></i>
+                            <h3 class="heading-tertiary mb-10">
+                                Heading
+                            </h3>
+                            <p class="passtime-box__text">
+                                Lorem ipsum dolor sit amet consectetur elit. Similique tempore,
+                                sed nulla cumque voluptatem alias nisi! Sed aliquam nostrum
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="passtime-box">
+                            <i class="passtime-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary mb-10">
+                                Heading
+                            </h3>
+                            <p class="passtime-box__text">
+                                Lorem ipsum dolor sit amet consectetur elit. Similique tempore,
+                                sed nulla cumque voluptatem alias nisi! Sed aliquam nostrum
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="passtime-box">
+                            <i class="passtime-box__icon icon-basic-clubs"></i>
+                            <h3 class="heading-tertiary mb-10">
+                                Heading
+                            </h3>
+                            <p class="passtime-box__text">
+                                Lorem ipsum dolor sit amet consectetur elit. Similique tempore,
+                                sed nulla cumque voluptatem alias nisi! Sed aliquam nostrum
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="passtime-box">
+                            <i class="passtime-box__icon icon-basic-diamonds"></i>
+                            <h3 class="heading-tertiary mb-10">
+                                Heading
+                            </h3>
+                            <p class="passtime-box__text">
+                                Lorem ipsum dolor sit amet consectetur elit. Similique tempore,
+                                sed nulla cumque voluptatem alias nisi! Sed aliquam nostrum
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>        
